Refactoring into multi-modules